# SmartPen

./: .gitignore  .pre-commit-config.yaml  ANDROID_BUILD.md  DEMO_GUIDE.md  ENV_USAGE.md  PROJECT_SUMMARY.md  README.md  activate_penenv.sh
.codex/: config.yaml  ignore_rules.yaml
.github/: pull_request_template.md
.ralph/: @AGENT.md  @fix_plan.md  PROMPT.md
backend/: alembic.ini  inspect_scoring_schema.py  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/algorithms/: __init__.py  dtw.py  resampling.py
backend/app/api/: characters.py  custom_characters.py  scoring.py  user_progress.py
backend/app/models/: __init__.py  character.py  custom_character.py  custom_character_db.py  inksight.py  model_loader.py  paddle_ocr.py  posture.py  user_progress.py  user_progress_db.py
backend/app/parsers/: __init__.py  hanzi_writer.py
backend/app/preprocessing/: __init__.py  image.py  skeleton.py
backend/app/scoring/: __init__.py  normalizer.py  posture_scorer.py  stroke_order.py  validation.py
backend/app/scripts/: generate_test_data.py  init_data.py
backend/archive/: INKSIGHT_MIGRATION.md  download_inksight.py  inksight.py
backend/archive/tests/: test_inksight.py
backend/tests/: test_api_integration.py  test_character_model.py  test_dtw.py  test_hanzi_writer_loader.py  test_main.py  test_normalizer.py  test_paddle_ocr.py  test_performance.py  test_preprocessing.py  test_resampling.py  test_score_from_photo.py  test_stroke_order.py
deployment/: .env.example  DEPLOYMENT.md  Dockerfile  docker-compose.yml  nginx.conf
docs/: PRD-v2.2-final.md  PROJECT_STATUS_2026-01-31.md
frontend/: .flutter-plugins-dependencies  BUILD_QUICK.md  GRADLE_FIX.md  README.md  pubspec.yaml
memo/: 2020-01-30智能门校准系统实施计划.md  MLKIT_DEBUG_INFO.md  flutter命令.md  (+3 more)
(+66 files in other folders)
