[project]
name = "smartpen-backend"
version = "0.1.0"
description = "SmartPen (智笔) Backend - AI Calligraphy Teaching System"
requires-python = ">=3.10"
dependencies = [
    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Async HTTP
    "httpx>=0.25.0",

    # AI/ML - CRITICAL VERSION CONSTRAINTS
    # ⚠️ TensorFlow: Strictly 2.15.0-2.17.0 for InkSight compatibility
    "tensorflow>=2.15.0,<2.18.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",

    # Computer Vision
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",

    # OCR
    "paddlepaddle>=2.5.0",
    "paddleocr>=2.7.0",

    # DTW Algorithm
    "dtw-python>=1.0.0",

    # Utilities
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",

    # Code Quality
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",

    # Type Stubs
    "types-redis>=4.6.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Allow gradual typing
